--- a/Machine_Learning_NLP.ipynb
+++ b/Machine_Learning_NLP.ipynb
@@ -49,7 +49,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43f3cdb4-4bda-4288-ec60-d612ed6d9df0"
+        "outputId": "02de4e4e-adf9-44f4-b9df-4277c822c72b"
       },
       "source": [
         "# dataframes library\n",
@@ -109,10 +109,10 @@
             "Requirement already satisfied: pyahocorasick in /usr/local/lib/python3.6/dist-packages (from textsearch->contractions) (1.4.0)\n",
             "Requirement already satisfied: Unidecode in /usr/local/lib/python3.6/dist-packages (from textsearch->contractions) (1.1.1)\n",
             "Requirement already up-to-date: nltk in /usr/local/lib/python3.6/dist-packages (3.5)\n",
+            "Requirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from nltk) (4.41.1)\n",
             "Requirement already satisfied, skipping upgrade: click in /usr/local/lib/python3.6/dist-packages (from nltk) (7.1.2)\n",
             "Requirement already satisfied, skipping upgrade: regex in /usr/local/lib/python3.6/dist-packages (from nltk) (2019.12.20)\n",
             "Requirement already satisfied, skipping upgrade: joblib in /usr/local/lib/python3.6/dist-packages (from nltk) (0.17.0)\n",
-            "Requirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from nltk) (4.41.1)\n",
             "Requirement already satisfied: emoji in /usr/local/lib/python3.6/dist-packages (0.6.0)\n"
           ],
           "name": "stdout"
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 402
         },
-        "outputId": "79261cad-c885-47f9-e1db-70447b986eb7"
+        "outputId": "1f05f236-a36a-44e8-a392-65039248ceab"
       },
       "source": [
         "dataset_tweets_preprocesing"
@@ -377,7 +377,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "27180b13-1005-4552-f9c0-8d23b44dd92a"
+        "outputId": "d56724e9-3dd7-4368-ccbf-4ecb5612fe12"
       },
       "source": [
         "#@title Texto de título predeterminado\n",
@@ -468,7 +468,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IYkHFwcA7UuA"
+        "id": "IYkHFwcA7UuA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17f82c6c-c921-4af0-9559-546c86c54517"
       },
       "source": [
         "%%time\n",
@@ -491,6 +495,29 @@
         "ds_alt_twitter = ds_alt_twitter.apply(processArray) #Traducir emoji a texto\n",
         "\n"
       ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 57min 43s, sys: 767 ms, total: 57min 44s\n",
+            "Wall time: 57min 47s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5C-9C_2IA6Rf"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')\n",
+        "\n",
+        "ds_alt_twitter.to_csv(r'/content/gdrive/My Drive/preprocesado.csv')"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -512,7 +539,7 @@
         "def identity_tokenizer(text):\n",
         "    return text"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -547,17 +574,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vx3kLVUVaThl"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 229
+        },
+        "id": "TtfmrNcOxqOO",
+        "outputId": "71c4ee05-04bd-4b04-8563-b96fb8fcfea6"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
-        "\n",
-        "ds_alt_twitter.to_csv(r'/content/gdrive/My Drive/preprocesado.csv')\n",
         "tweets_vectorization.to_csv(r'/content/gdrive/My Drive/vectorization.csv')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-2365a3af5aea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mds_alt_twitter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'/content/gdrive/My Drive/preprocesado.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtweets_vectorization\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'/content/gdrive/My Drive/vectorization.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ds_alt_twitter' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -586,6 +635,8 @@
         "id": "7EwpHqVfryVX"
       },
       "source": [
+        "%%time\n",
+        "\n",
         "n_tweets = tweets_vectorization.shape[0]\n",
         "n_features = tweets_vectorization.shape[1]\n",
         "n_features = int(n_features*0.3)\n",
@@ -774,6 +825,17 @@
         "plot_confusion_matrix(test['target'], y_pred, classes=class_label, normalize=True,\n",
         "                      title='Confusion matrix')\n",
         "  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NJYhbQCtV7LV"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
