--- a/Machine_Learning_NLP_Vectorization_Classification.ipynb
+++ b/Machine_Learning_NLP_Vectorization_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Machine Learning NLP / Vectorization - Classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrAPZrpPdhj7nt62YZL8oA",
+      "authorship_tag": "ABX9TyMnUucavkql0iQU2gJv21qh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1509,6 +1509,35 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6CFOSExhfYPN",
+        "outputId": "72e15c62-6d23-47c3-d5a4-3fb7379317e8"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "unique, counts = np.unique(labels, return_counts=True)\n",
+        "unique_test, counts_test = np.unique(test['target'], return_counts=True)\n",
+        "print('Predicted:', dict(zip(unique, counts)))\n",
+        "print('Test:', dict(zip(unique_test, counts_test)))"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Predicted: {0: 99, 1: 5081, 2: 820}\n",
+            "Test: {0: 353, 1: 4626, 2: 1021}\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
