Edu no usabas el corrector correcto 😡

--- a/Machine_Learning_NLP_PreProcesing.ipynb
+++ b/Machine_Learning_NLP_PreProcesing.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manuvillalba-uclm/Natural_Lenguaje_Processing-ELM/blob/Preprocessing/Machine_Learning_NLP_PreProcesing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manuvillalba-uclm/Natural_Lenguaje_Processing-ELM/blob/Pre-processing-clean-up-and-revision/Machine_Learning_NLP_PreProcesing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02de4e4e-adf9-44f4-b9df-4277c822c72b"
+        "outputId": "f1a2b63a-588e-4b14-90bc-0763f1b6e4ce"
       },
       "source": [
         "# dataframes library\n",
@@ -96,20 +96,20 @@
         "from sklearn.utils.multiclass import unique_labels\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pyspellchecker in /usr/local/lib/python3.6/dist-packages (0.5.5)\n",
-            "Requirement already satisfied: contractions in /usr/local/lib/python3.6/dist-packages (0.0.25)\n",
+            "Requirement already satisfied: contractions in /usr/local/lib/python3.6/dist-packages (0.0.43)\n",
             "Requirement already satisfied: textsearch in /usr/local/lib/python3.6/dist-packages (from contractions) (0.0.17)\n",
-            "Requirement already satisfied: pyahocorasick in /usr/local/lib/python3.6/dist-packages (from textsearch->contractions) (1.4.0)\n",
             "Requirement already satisfied: Unidecode in /usr/local/lib/python3.6/dist-packages (from textsearch->contractions) (1.1.1)\n",
+            "Requirement already satisfied: pyahocorasick in /usr/local/lib/python3.6/dist-packages (from textsearch->contractions) (1.4.0)\n",
             "Requirement already up-to-date: nltk in /usr/local/lib/python3.6/dist-packages (3.5)\n",
             "Requirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from nltk) (4.41.1)\n",
-            "Requirement already satisfied, skipping upgrade: click in /usr/local/lib/python3.6/dist-packages (from nltk) (7.1.2)\n",
             "Requirement already satisfied, skipping upgrade: regex in /usr/local/lib/python3.6/dist-packages (from nltk) (2019.12.20)\n",
+            "Requirement already satisfied, skipping upgrade: click in /usr/local/lib/python3.6/dist-packages (from nltk) (7.1.2)\n",
             "Requirement already satisfied, skipping upgrade: joblib in /usr/local/lib/python3.6/dist-packages (from nltk) (0.17.0)\n",
             "Requirement already satisfied: emoji in /usr/local/lib/python3.6/dist-packages (0.6.0)\n"
           ],
@@ -182,11 +182,11 @@
       },
       "source": [
         "english_stops = set(stopwords.words('english'))\n",
-        "spell = SpellChecker()\n",
+        "spell = SpellChecker(distance=1)\n",
         "lemmatizer = WordNetLemmatizer()\n",
         "stemmer = PorterStemmer()\n"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -195,9 +195,9 @@
         "id": "9FFUw2ucLm1b"
       },
       "source": [
-        "raw_dataset_tweets = pd.read_csv('https://raw.githubusercontent.com/manuvillalba-uclm/Natural_Lenguaje_Processing-ELM/main/labeled_data.csv?token=ANLXPWL27WHT4VS5U4LHMVK72D27M', index_col=[0])"
+        "raw_dataset_tweets = pd.read_csv('https://raw.githubusercontent.com/manuvillalba-uclm/Natural_Lenguaje_Processing-ELM/Pre-processing-clean-up-and-revision/labeled_data.csv?token=ANLXPWN4VUDYSEP2V5O6BM273JTYU', index_col=[0])"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
         "dataset_tweets_preprocesing.drop(\"neither\", axis = 1, inplace = True)\n",
         "dataset_tweets_preprocesing.drop(\"class\", axis = 1, inplace = True)"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -253,12 +253,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 402
         },
-        "outputId": "1f05f236-a36a-44e8-a392-65039248ceab"
+        "outputId": "073dcb05-1d71-4503-d36e-187035597f20"
       },
       "source": [
         "dataset_tweets_preprocesing"
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 62
         }
       ]
     },
@@ -375,11 +375,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d56724e9-3dd7-4368-ccbf-4ecb5612fe12"
+        "outputId": "17dc2aa7-9585-4978-dc0e-1e69de34f030"
       },
       "source": [
         "#@title Texto de título predeterminado\n",
-        "num_tweets = 24783 #@param {type:\"slider\", min:20, max:24783, step:10}\n",
+        "num_tweets = 1000 #@param {type:\"slider\", min:1, max:24783, step:10}\n",
         "\n",
         "examples_preprocesing = dataset_tweets_preprocesing.iloc[0:num_tweets,0]\n",
         "examples_preprocesing.reset_index(inplace = True, drop= True)\n",
@@ -388,23 +388,23 @@
         "lista_tweets = []\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0        !!! RT @mayasolovely: As a woman you shouldn't...\n",
-            "1        !!!!! RT @mleew17: boy dats cold...tyga dwn ba...\n",
-            "2        !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...\n",
-            "3        !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...\n",
-            "4        !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...\n",
-            "                               ...                        \n",
-            "24778    you's a muthaf***in lie &#8220;@LifeAsKing: @2...\n",
-            "24779    you've gone and broke the wrong heart baby, an...\n",
-            "24780    young buck wanna eat!!.. dat nigguh like I ain...\n",
-            "24781                youu got wild bitches tellin you lies\n",
-            "24782    ~~Ruffled | Ntac Eileen Dahlia - Beautiful col...\n",
-            "Name: tweet, Length: 24783, dtype: object\n"
+            "0      !!! RT @mayasolovely: As a woman you shouldn't...\n",
+            "1      !!!!! RT @mleew17: boy dats cold...tyga dwn ba...\n",
+            "2      !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...\n",
+            "3      !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...\n",
+            "4      !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...\n",
+            "                             ...                        \n",
+            "995    &#128514;&#128514;&#128514;&#128514; RT @SMASH...\n",
+            "996    &#128514;&#128514;&#128514;&#128514; bitch if ...\n",
+            "997    &#128514;&#128514;&#128514;&#128514; these fol...\n",
+            "998    &#128514;&#128514;&#128514;&#128514;&#128514; ...\n",
+            "999    &#128514;&#128514;&#128514;&#128514;&#128514;&...\n",
+            "Name: tweet, Length: 1000, dtype: object\n"
           ],
           "name": "stdout"
         }
@@ -458,22 +458,19 @@
         "  #   arr_tags = nltk.pos_tag(text_arr)\n",
         "  # except:\n",
         "  #   arr_tags = text_arr\n",
-        "  return text_arr"
+        "  return text_arr\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IYkHFwcA7UuA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "17f82c6c-c921-4af0-9559-546c86c54517"
+        "id": "IYkHFwcA7UuA"
       },
       "source": [
-        "%%time\n",
+        "\n",
         "\n",
         "ds_alt_twitter = examples_preprocesing.copy()\n",
         "ds_alt_twitter = ds_alt_twitter.str.lower() #A minusc\n",
@@ -487,21 +484,52 @@
         "ds_alt_twitter = ds_alt_twitter.apply(stopwords) #Quitar Stopwords\n",
         "ds_alt_twitter = ds_alt_twitter.apply(remove_urls) #Quitar url\n",
         "\n",
-        "ds_alt_twitter = ds_alt_twitter.apply(lambda x: str(TextBlob(x).correct()))\n",
+        "#ds_alt_twitter = ds_alt_twitter.apply(lambda x: str(TextBlob(x).correct()))\n",
+        "ds_alt_twitter = ds_alt_twitter.apply(spell.known)\n",
         "ds_alt_twitter = ds_alt_twitter.apply(TweetTokenizer().tokenize) #Tokenizar\n",
         "ds_alt_twitter = ds_alt_twitter.apply(demojizar) #Traducir emoji a texto\n",
         "ds_alt_twitter = ds_alt_twitter.apply(processArray) #Traducir emoji a texto\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vZXa1dvlajN3",
+        "outputId": "c77f4ae0-b902-45c1-b9a9-74354e25d2ae"
+      },
+      "source": [
+        "ds_alt_twitter"
+      ],
+      "execution_count": 69,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 57min 43s, sys: 767 ms, total: 57min 44s\n",
-            "Wall time: 57min 47s\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      {h, m, w, n, l, i, u, p, e, y, c, t, s, k, o, ...\n",
+              "1      {f, d, w, n, l, u, i, h, p, b, y, e, t, c, s, ...\n",
+              "2      {f, d, w, u, i, h, n, e, v, b, y, c, k, t, s, ...\n",
+              "3                         {i, l, n, e, y, k, t, o, a, r}\n",
+              "4      {h, f, m, i, u, l, d, e, b, y, t, k, s, c, o, ...\n",
+              "                             ...                        \n",
+              "995    {h, d, m, u, i, n, w, b, e, c, k, s, t, o, a, ...\n",
+              "996           {h, d, w, i, l, b, e, c, t, k, o, n, r, g}\n",
+              "997                 {f, d, h, i, l, b, k, t, s, o, a, r}\n",
+              "998              {h, d, m, i, n, b, y, t, c, o, a, r, g}\n",
+              "999                    {h, m, i, l, b, e, a, t, c, s, n}\n",
+              "Name: tweet, Length: 1000, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
         }
       ]
     },
@@ -515,6 +543,68 @@
         "drive.mount('/content/gdrive')\n",
         "\n",
         "ds_alt_twitter.to_csv(r'/content/gdrive/My Drive/preprocesado.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pL3mkFQFrHW2"
+      },
+      "source": [
+        "def identity_tokenizer(text):\n",
+        "    return text"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TtwBBcIUnN5-"
+      },
+      "source": [
+        "%%time\n",
+        "\n",
+        "# TF-IDF\n",
+        "vectorizer = TfidfVectorizer(tokenizer=identity_tokenizer, lowercase=False)    \n",
+        "vectors = vectorizer.fit_transform(ds_alt_twitter)\n",
+        "\n",
+        "feature_names = vectorizer.get_feature_names()\n",
+        "dense = vectors.todense()\n",
+        "denselist = dense.tolist()\n",
+        "tweets_vectorization = pd.DataFrame(denselist, columns=feature_names)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MVQOKRsFMZaH"
+      },
+      "source": [
+        "tweets_vectorization"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dMeoa1ghXRPQ"
+      },
+      "source": [
+        "# find those words that may be misspelled\r\n",
+        "misspelled = spell.known(['something', 'is', 'hapenning', 'here','z'])\r\n",
+        "\r\n",
+        "for word in misspelled:\r\n",
+        "  # Get the one `most likely` answer\r\n",
+        "  print(spell.correction(word))\r\n",
+        "\r\n",
+        "  # Get a list of `likely` options\r\n",
+        "  print(spell.candidates(word))"
       ],
       "execution_count": null,
       "outputs": []
